k8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ems-backend-service
  namespace: ems
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
  selector:
    app: ems-backend
